--- a/bibliography.bib
+++ b/bibliography.bib
@@ -25,6 +25,15 @@
   langid     = {czech},
 }
 
+@ONLINE{rofiGit,
+  title     = {RoFI - Metamorphic Distributed Robots},
+  date      = {2019},
+  url       = {https://github.com/paradise-fi/RoFI},
+  urldate   = {2019-05-01},
+  location  = {Brno},
+  langid    = {english}
+}
+
 @ONLINE{rofiCom,
   title     = {RoFICom Connector},
   date      = {2019},
@@ -47,6 +56,14 @@
   title     = {Open MPI}, 
   date      = {2019-04-15}, 
   url       = {https://www.open-mpi.org/}, 
+  urldate   = {2019-05-01}, 
+  langid    = {english}
+}
+
+@ONLINE{openMPIGit,
+  title     = {Open MPI main development repository}, 
+  date      = {2019-05-01}, 
+  url       = {https://github.com/open-mpi/ompi}, 
   urldate   = {2019-05-01}, 
   langid    = {english}
 }
