Add description of usage of preprocessing and rofi-distribute

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -26,7 +26,7 @@
 }
 
 @ONLINE{rofiGit,
-  title     = {RoFI - Metamorphic Distributed Robots},
+  title     = {Metamorphic Distributed Robots},
   date      = {2019},
   url       = {https://github.com/paradise-fi/RoFI},
   urldate   = {2019-05-01},
@@ -62,8 +62,16 @@
 
 @ONLINE{openMPIGit,
   title     = {Open MPI main development repository}, 
-  date      = {2019-05-01}, 
+  date      = {2019-05-22}, 
   url       = {https://github.com/open-mpi/ompi}, 
-  urldate   = {2019-05-01}, 
+  urldate   = {2019-05-22}, 
+  langid    = {english}
+}
+
+@ONLINE{openMPIHostFile,
+  title     = {Running MPI jobs}, 
+  date      = {2019-01-17}, 
+  url       = {https://www.open-mpi.org/faq/?category=running#mpirun-hostfile}, 
+  urldate   = {2019-05-03}, 
   langid    = {english}
 }
